Optimize boolean masked operations (#418)